--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Tob Wall Remover
+author=ppyLEK
+description=Removes roofs and other scenery at tob bank. Re-entering tob bank required.
+tags=tob,theater of blood,theatre of blood
+support=https://github.com/ppyLEK/removeTobWall
+plugins=com.ppyLEK.RemoveTobWall
