--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Tob Wall Remover
+displayName=Tob Bank Floors
 author=ppyLEK
-description=Removes roofs and other scenery at tob bank. Re-entering tob bank required.
+description=Removes upper floors at tob bank. Re-entering tob bank required for changes to apply.
 tags=tob,theater of blood,theatre of blood
 support=https://github.com/ppyLEK/removeTobWall
-plugins=com.ppyLEK.RemoveTobWall
+plugins=com.ppyLEK.RemoveUpperFloorsTobPlugin
